--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bs-querystringify": "^0.1.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "reason-react": "^0.5.3"
+    "reason-react": "^0.5.3",
+    "semantic-release": "^15.12.0"
   }
 }
