--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ workflows:
     jobs:
       - build
       - deploy:
+          context: semantic-release
           requires:
             - build
           filters:
